# wlib-malloc

./: .gitignore  CMakeLists.txt  README.md  wio.yml  wmake
include/wlib/: byte  malloc  memory  pool  static_pool
include/wlib/mem/: Byte.h  Malloc.h  Pool.h  StaticPool.h  malloc.h
src/: Malloc.cpp  Pool.cpp  StaticPool.cpp  config.h  malloc.cpp
tests/: internal.h  main.cpp
tests/cosa/: main.cpp
tests/native/: main.cpp
unit/: main.cpp
